Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>T-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Timesheet Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>