Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/CourseName__c.field-meta.xml
<CustomField>
    <fullName>CourseName__c</fullName>
    <label>Course Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>