Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/FacultyName__c.field-meta.xml
<CustomField>
    <fullName>FacultyName__c</fullName>
    <label>Faculty Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>