Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/NoOfHours__c.field-meta.xml
<CustomField>
    <fullName>NoOfHours__c</fullName>
    <label>No Of Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>