Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>