Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SessionId</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>