Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/SessionName__c.field-meta.xml
<CustomField>
    <fullName>SessionName__c</fullName>
    <label>Session Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>