Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/ShowDate__c.field-meta.xml
<CustomField>
    <fullName>ShowDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>