Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <length>30</length>
    <type>Text</type>
</CustomField>