Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>IntiPM_Time__c.ru_Hours_Actual__c</summarizedField>
    <summaryForeignKey>IntiPM_Time__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>