Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/fields/Week_Ending_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Ending_Date__c</fullName>
    <label>Week Ending Date</label>
    <type>Date</type>
</CustomField>