Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending_Date__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>