Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/listViews/Hans_Nieuwenhuis.listView-meta.xml
<ListView>
    <fullName>Hans_Nieuwenhuis</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending_Date__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Hans Nieuwenhuis</label>
</ListView>