Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/listViews/Jan_Willem_Borrius.listView-meta.xml
<ListView>
    <fullName>Jan_Willem_Borrius</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending_Date__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>Jan-Willem Borrius</label>
</ListView>