Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/listViews/Jochem_van_den_Heuvel.listView-meta.xml
<ListView>
    <fullName>Jochem_van_den_Heuvel</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending_Date__c</columns>
    <columns>Total_Hours__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Jochem van den Heuvel</label>
</ListView>