Reetan.Nayak Dev 25/force-app/main/default/objects/Timesheet__c/listViews/Michael_Doves.listView-meta.xml
<ListView>
    <fullName>Michael_Doves</fullName>
    <columns>NAME</columns>
    <columns>Week_Ending_Date__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>Michael Doves</label>
</ListView>